<resources>
    <string name="app_name">FedUni Millionaire 30360914</string>
    <string name="feduni_millionaire">FedUni Millionaire</string>
    <string name="start">Start</string>
    <string name="who_wants_to_be_a_millionaire">Who Wants to be a Millionaire?</string>
    <string name="a">A.</string>
    <string name="b">B.</string>
    <string name="c">C.</string>
    <string name="d">D.</string>
    <string name="submit">Submit</string>
    <string name="semi_colon">:</string>
    <string name="dollar_value">Dollar value</string>
    <string name="placeholder">placeholder</string>
    <string name="safe_money">Safe money</string>
    <string name="questions_left">Questions left</string>
    <string name="question">Question:</string>
    <string name="question_title">Question Title:</string>
    <string name="lose_message">Wrong answer.</string>
    <string name="win_message">Congratulations. You Win!</string>
    <string name="main_menu">Main menu</string>
    <string name="you_ve_won">You\'ve won</string>
    <string name="difficulty">Difficulty:</string>
    <string name="times_up">Time\'s Up!</string>
    <string name="play_hot_seat_mode">Play Hot Seat Mode</string>
    <string name="play_normal_mode">Play Normal Mode</string>
    <string name="view_scores">View Scores</string>
    <string name="final_scores">Final Scores</string>
    <string name="name">Name</string>
    <string name="money_won">Money won</string>
    <string name="date_time">Date/time</string>
    <string name="your_name">Your name</string>
    <string name="error_player_name">Please enter your name</string>
    <string name="delete">Delete</string>
    <string name="edit_questions">Edit questions</string>
    <string name="questions">Questions</string>
    <string name="new_">New</string>
    <string name="question_title_2">question title</string>
    <string name="correct_answer">Correct answer:</string>
    <string name="correct_answer_2">correct answer</string>
    <string name="wrong_answers">Wrong answers:</string>
    <string name="wrong_answer_2">wrong answer</string>
    <string name="hard">Hard</string>
    <string name="medium">Medium</string>
    <string name="easy">Easy</string>
    <string name="hide">Hide</string>
    <string name="add">Add</string>
    <string name="lifelines">Lifelines</string>
    <string name="_50_50">50:50</string>
    <string name="ask_audience">Ask audience</string>
    <string name="switch_">Switch</string>
    <string name="placeholder_num">##</string>
    <string name="shake_to_clear_form">Shake to clear form</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="dialog_clear_form_title">Clear form</string>
    <string name="dialog_clear_form_message">Are you sure you want to clear the form?</string>

    <string-array name="difficulty_array">
        <item>easy</item>
        <item>medium</item>
        <item>hard</item>
    </string-array>
</resources>